Project

General

Profile

Actions

Bug #17119

closed

String#partition and #rpartition return wrong result for Regexp patterns containing /\K/

Bug #17119: String#partition and #rpartition return wrong result for Regexp patterns containing /\K/

Added by hanazuki (Kasumi Hanazuki) about 6 years ago. Updated about 6 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.8.0dev (2020-08-13T01:14:20Z master 69b5241c36) [x86_64-linux]
[ruby-core:99577]

Description

When the Regexp pattern given to String#partition and String#rpartition contain a /\K/ (lookbehind) operator, the methods return strings sliced at incorrect positions.

# expected -- partitioned at "c" following "b"
"abcdbce".partition(/b\Kc/)  # => ["ab", "c", "dbce"]
"abcdbce".rpartition(/b\Kc/)  # => ["abcdb", "c", "e"]
# actual -- results are not partitions
"abcdbce".partition(/b\Kc/)  # => ["a", "c", "cdbce"]
"abcdbce".rpartition(/b\Kc/)  # => ["abcd", "c", "ce"]
Actions

Also available in: PDF Atom